Finished moving calendar views into modals.

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -92,16 +92,6 @@ block content
               li(ng-repeat="calendar in viewBusyCalendars")
                 a(href, ng-click="displayCalendar(calendar)") {{ calendar.name }}
 
-          #calendarDetailsWindow(ng-show="selector == 3")
-            h3 {{ selectedCalendar.name }}
-            b Owner 
-            | {{ selectedCalendar.owner.name }}
-            br
-            b Events 
-            ul
-              li(ng-repeat="event in selectedCalendar.events")
-                a(href ng-click="displayEventDetails(event)") {{ event.name }}
-
           #PUDEvents(ng-show="selector == 4")
             br
             h4 To-Do
@@ -647,6 +637,19 @@ block content
         | &nbsp;
         button.btn.btn-primary(ng-click="displayAddUsersModal()") Add Users with Modify
 
+    script(type="text/ng-template" id="otherCalendarModal.html" )
+      .modal-header
+        button.close(type='button', ng-click="cancel()") &times;
+        h4#myModalLabel.modal-title() {{ selectedCalendar.name }}
+      .modal-body
+        b Owner 
+          | {{ selectedCalendar.owner.name }}
+        br
+        b Events 
+        ul
+          li(ng-repeat="event in selectedCalendar.events")
+            a(href ng-click="displayEventDetails(event)") {{ event.name }}
+
     script(type="text/ng-template" id="conflictSummaryModal.html" )
       .modal-header
         button.close(type='button', ng-click="cancel()") &times;
@@ -683,7 +686,6 @@ block content
     script(type='text/javascript', src='/js/sideBarController.js')
     script(type='text/javascript', src='/js/addRuleModalController.js')
     script(type='text/javascript', src='/js/addUserModalController.js')
-    script(type='text/javascript', src='/js/ownedCalendarModalController.js')
-    //script(type='text/javascript', src='/js/addUserModalController.js')
+    script(type='text/javascript', src='/js/calendarModalController.js')
     script(type='text/javascript', src='/js/conflictSummaryModalController.js')
 
