--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -599,8 +599,9 @@ block content
               p
                 ul(ng-show="selectedSsuSlots.length > 0")
                   li(ng-repeat="block in selectedSsuSlots") {{ convertDates(block.start, block.end) }}
-                    a(href, ng-click="cancelSignupSlot(block)")
+                    a(href, ng-click="cancelSignupSlot(block, selectedSsuSlots)")
                       span.glyphicon.glyphicon-remove
+
     script(type="text/ng-template" id="ownedCalendarModal.html" )
       .modal-header
         button.close(type='button', ng-click="cancel()") &times;
