--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -509,17 +509,17 @@ block content
           p(style="display: table-row;")
             label(style="display: table-cell;") Sign-up Minimum Slot Time
             | &nbsp;
-            input.form-control(style="display: table-cell;", type="text", placeholder="in minutes", ng-model="ssuDetails.evMinDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
+            input.form-control(style="display: table-cell;", type="text", placeholder="In minutes", ng-model="ssuDetails.evMinDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
           br
           p(style="display: table-row;")
             label(style="display: table-cell;") Sign-up Maximum Slot Time
             | &nbsp;
-            input.form-control(style="display: table-cell;", type="text", placeholder="multiple of minimum", ng-model="ssuDetails.evMaxDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
+            input.form-control(style="display: table-cell;", type="text", placeholder="Multiple of minimum", ng-model="ssuDetails.evMaxDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
           br
           p(style="display: table-row;")
             label(style="display: table-cell;") Max Sign-ups per User
             | &nbsp;
-            input.form-control(style="display: table-cell;", type="text", placeholder="e.g. 2 for two slots", ng-model="ssuDetails.evMaxPerUser", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
+            input.form-control(style="display: table-cell;", type="text", placeholder="E.g. 2 for two slots", ng-model="ssuDetails.evMaxPerUser", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
           br
           p(style="display: table-row;")
             label(style="display: table-cell;") User Groups
@@ -540,6 +540,7 @@ block content
             p(style='display: table-cell;')
             ul(style='display: table-cell; list-style-type: none; padding-left: 10px;')
               li(ng-repeat="user in ssuDetails.userList") {{ user }}
+                | &nbsp;
                 a(href, ng-click="removeUserFromRequest(user, ssuDetails)")
                   span.glyphicon.glyphicon-remove
           
@@ -549,7 +550,9 @@ block content
           p(style="display:table-row;")
             label(style="display:table-cell;") Sign-up Section End Time
             input.form-control(style="display:table-cell;", type="datetime-local", ng-model="ssuDetails.sectionEnd", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00")
-          button.btn(ng-click="addSectionToSsu(ssuDetails.sectionStart, ssuDetails.sectionEnd)") Add Sign-up Section
+            | &nbsp;
+            a(href, ng-click="addSectionToSsu(ssuDetails.sectionStart, ssuDetails.sectionEnd)")
+              span.glyphicon.glyphicon-plus
           p(style="display:table-row;")
             {{ssuDetails.sectionErrorText}}
           ul
