Split modalController into controllers for events, pud, and ssu.

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -164,7 +164,9 @@ block content
     script(type='text/javascript', src='/js/ui-bootstrap-tpls.min.js')
     script(type='text/javascript', src='/js/date.js')
     script(type='text/javascript', src='/js/index.js')
-    script(type='text/javascript', src='/js/modalController.js')
+    script(type='text/javascript', src='/js/eventModalController.js')
+    script(type='text/javascript', src='/js/pudModalController.js')
+    script(type='text/javascript', src='/js/ssuModalController.js')
     script(type='text/javascript', src='/js/sideBarController.js')
     script(type='text/javascript', src='/js/addRuleModalController.js')
     script(type='text/javascript', src='/js/addUserModalController.js')
