--- a/views/modals/otherCalendarModal.jade
+++ b/views/modals/otherCalendarModal.jade
@@ -8,4 +8,4 @@
   b Events 
   ul
     li(ng-repeat="event in selectedCalendar.events")
-      a(href ng-click="displayEventDetails(event)") {{ event.name }}
+      a(href="#", ng-click="displayEventDetails(event)") {{ event.name }}
