--- a/views/modals/ssuSignupModal.jade
+++ b/views/modals/ssuSignupModal.jade
@@ -21,12 +21,12 @@
         label(style="display: table-cell;") Slots
         br
         select.form-control(style="display:table-cell;", ng-model="selectedBlock", ng-options="convertDates(block.start, block.end) for block in selectedSsu.freeBlocks")
-        a(href, ng-click="addTimeToSlot(selectedBlock, selectedSsu.maxDuration)")
+        a(href="#", ng-click="addTimeToSlot(selectedBlock, selectedSsu.maxDuration)")
           span.glyphicon.glyphicon-plus
         | &nbsp;
         p(ng-show="currentTimeRange")
           {{ convertDates(currentTimeRange.start, currentTimeRange.end) }}
-          a(href, ng-click="clearCurrentTimeRange()")
+          a(href="#", ng-click="clearCurrentTimeRange()")
             span.glyphicon.glyphicon-remove
         | &nbsp;
         button.btn(ng-disabled="selectedSsuSlots.length >= selectedSsu.maxPerUser", ng-click="ssuSignupForSlot(currentTimeRange, selectedSsu._id)") Sign-Up
@@ -38,5 +38,5 @@
         p
           ul(ng-show="selectedSsuSlots.length > 0")
             li(ng-repeat="block in selectedSsuSlots") {{ convertDates(block.start, block.end) }}
-              a(href, ng-click="cancelSignupSlot(block, selectedSsuSlots)")
+              a(href="#", ng-click="cancelSignupSlot(block, selectedSsuSlots)")
                 span.glyphicon.glyphicon-remove
