--- a/views/modals/conflictSummaryModal.jade
+++ b/views/modals/conflictSummaryModal.jade
@@ -6,7 +6,7 @@
     li(ng-repeat="summary in conflictSummary")
       h4
         u {{ convertDates(summary.timeSlot.start, summary.timeSlot.end) }} ({{summary.conflicts.length}} conflicts)
-      a(href, ng-click="toggleConflictDetails(summary)") Conflicts
+      a(href="#", ng-click="toggleConflictDetails(summary)") Conflicts
       ul(ng-show="summary.showDetails")
         li(ng-repeat="conflict in summary.conflicts")
           b {{conflict.emailKey}} 
@@ -18,4 +18,4 @@
       | Free Times
       ul
         li(ng-repeat="free in summary.freeTimes")
-          a(href, ng-click="chooseEventTime(free.start, free.end)") {{ convertDates(free.start, free.end) }}
+          a(href="#", ng-click="chooseEventTime(free.start, free.end)") {{ convertDates(free.start, free.end) }}
