--- a/views/modals/createSsuModal.jade
+++ b/views/modals/createSsuModal.jade
@@ -35,7 +35,7 @@
       p(style='display: table-cell;')
       ul
         li(ng-repeat="userGroup in ssuDetails.userGroups") {{ userGroup.name }}
-          a(href, ng-click="removeUserGroupFromRequest(userGroup, ssuDetails)")
+          a(href="#", ng-click="removeUserGroupFromRequest(userGroup, ssuDetails)")
             span.glyphicon.glyphicon-remove
     p(style="display: table-row;")
       Label(style="display: table-cell;") Users
@@ -46,7 +46,7 @@
       ul(style='display: table-cell; list-style-type: none; padding-left: 10px;')
         li(ng-repeat="user in ssuDetails.userList") {{ user }}
           | &nbsp;
-          a(href, ng-click="removeUserFromRequest(user, ssuDetails)")
+          a(href="#", ng-click="removeUserFromRequest(user, ssuDetails)")
             span.glyphicon.glyphicon-remove
     
     p(style="display:table-row;")
@@ -56,13 +56,13 @@
       label(style="display:table-cell;") Sign-up Section End Time
       input.form-control(style="display:table-cell;", type="datetime-local", ng-model="ssuDetails.sectionEnd", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00" max="2050-12-31T00:00")
       | &nbsp;
-      a(href, ng-click="addSectionToSsu(ssuDetails.sectionStart, ssuDetails.sectionEnd)")
+      a(href="#", ng-click="addSectionToSsu(ssuDetails.sectionStart, ssuDetails.sectionEnd)")
         span.glyphicon.glyphicon-plus
     p(style="display:table-row;")
       {{ssuDetails.sectionErrorText}}
     ul
       li(ng-repeat="section in ssuDetails.sections") {{section.start.toLocaleString()}} to {{section.end.toLocaleString()}}
-         a(href, ng-click="removeSectionFromSsu(section)")
+         a(href="#", ng-click="removeSectionFromSsu(section)")
             span.glyphicon.glyphicon-remove
   br
   .btn-group
