Fixed the owner being unable to see signups for attendees. It was an issue with ng-repeat within a paragraph having another repeat.

--- a/views/modals/ssuDetailsModal.jade
+++ b/views/modals/ssuDetailsModal.jade
@@ -22,8 +22,8 @@
       p
         b 
           | Invited Users
-        p(ng-repeat="user in selectedSsu.attendees")
-          | {{ user.userEmail }}
+        div(ng-repeat="user in selectedSsu.attendees")
+          p {{ user.userEmail }}
           ul
             li(ng-repeat="slot in user.slots") {{ convertDates(slot.start, slot.end) }}
   .row
