Added in form inputs for expiration times on PUD and escalation flag.

--- a/views/modals/createPudModal.jade
+++ b/views/modals/createPudModal.jade
@@ -12,6 +12,13 @@
       | &nbsp;
       input.form-control(style="display: table-cell;", type="text", placeholder="e.g. 2", ng-model="pudDetails.timeString", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
     br
+    p(style="display: table-row;")
+      label(style="display: table-cell;") Expiration Date
+      input.form-control(style="display: table-cell;", type="datetime-local", ng-model="pudDetails.expirationDate", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00", max="2050-12-31T00:00")
+    p(style="display: table-row;", ng-show="isValidTime(pudDetails.expirationDate)")
+      label(style="display: table-cell;") Priority Escalation?
+      input(type="checkbox", ng-model="pudDetails.willEscalate")
+
     
     p(style="display: table-row;")
       label(style="display: table-cell;") Alert Time
