--- a/views/modals/createSsuModal.jade
+++ b/views/modals/createSsuModal.jade
@@ -12,11 +12,23 @@
       textarea.form-control(style="display: table-cell;", rows="2", cols="40", ng-model="ssuDetails.evDescription", placeholder="Event Description")
     br
     p(style="display: table-row;")
+      label(style="display: table-cell;") Preference-Based Sign-up?
+      input(type="checkbox", ng-model="ssuDetails.preferenceBased")
+    br
+    p(style="display: table-row;")
+      label(style="display: table-cell;") Sign-up Deadline
+      input.form-control(style="display: table-cell;", type="datetime-local", ng-model="ssuDetails.signupDate", placeholder="yyyy-MM-ddTHH:mm", min="2015-01-01T00:00", max="2050-12-31T00:00")
+    br
+    p(style="display: table-row;", ng-show="isValidTime(pudDetails.expirationDate)")
+      label(style="display: table-cell;") Create PUD for Attendees?
+      input(type="checkbox", ng-model="ssuDetails.createPud")
+    br
+    p(style="display: table-row;")
       label(style="display: table-cell;") Sign-up Minimum Slot Time
       | &nbsp;
       input.form-control(style="display: table-cell;", type="text", placeholder="In minutes", ng-model="ssuDetails.evMinDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
     br
-    p(style="display: table-row;")
+    p(style="display: table-row;", ng-hide="ssuDetails.preferenceBased")
       label(style="display: table-cell;") Sign-up Maximum Slot Time
       | &nbsp;
       input.form-control(style="display: table-cell;", type="text", placeholder="Multiple of minimum", ng-model="ssuDetails.evMaxDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
