Made max time slot not required for SSU and it sets the max to the min if the time is missing.

--- a/views/modals/createSsuModal.jade
+++ b/views/modals/createSsuModal.jade
@@ -31,7 +31,7 @@
     p(style="display: table-row;", ng-hide="ssuDetails.preferenceBased")
       label(style="display: table-cell;") Sign-up Maximum Slot Time
       | &nbsp;
-      input.form-control(style="display: table-cell;", type="text", placeholder="Multiple of minimum", ng-model="ssuDetails.evMaxDuration", ng-pattern="/^[0-9]*.?[0-9]*$/", required)
+      input.form-control(style="display: table-cell;", type="text", placeholder="Multiple of minimum", ng-model="ssuDetails.evMaxDuration", ng-pattern="/^[0-9]*.?[0-9]*$/")
     br
     p(style="display: table-row;")
       label(style="display: table-cell;") Max Sign-ups per User
