--- a/views/modals/ssuResolutionModal.jade
+++ b/views/modals/ssuResolutionModal.jade
@@ -10,18 +10,6 @@
         p
           b Sign-Up Duration 
           | {{ selectedSsu.maxDuration + ' Minutes' }}
-          //
-            preferences
-              [
-                useremail
-                timeSlots
-                  startTime Date
-                  endTime Date
-              ]
-            preferenceBased
-            preferenceComplete
-
-            GENERATE SLOTS FOR USE IN RESOLUTION
         p
          b NOTE: Only the first block a user is assigned to will be given to them. Extra sign-ups will be ignored.
         form.navbar-form(style="display: table;", name="resolveSsuForm")
@@ -38,7 +26,7 @@
       p
         b 
           | Invited Users
-        div(ng-repeat="user in selectedSsu.attendees")
-          p {{ user.userEmail }}
+        div(ng-repeat="user in selectedSsu.preferences")
+          p {{ user.useremail }}
           ul
-            li(ng-repeat="slot in user.slots") {{ convertDates(slot.start, slot.end) }}
+            li(ng-repeat="slot in user.timeslots") {{ convertDates(slot.start, slot.end) }}
