--- a/views/modals/createSsuModal.jade
+++ b/views/modals/createSsuModal.jade
@@ -13,6 +13,7 @@
     br
     p(style="display: table-row;")
       label(style="display: table-cell;") Preference-Based Sign-up?
+      | &nbsp;
       input(type="checkbox", ng-model="ssuDetails.preferenceBased")
     br
     p(style="display: table-row;", ng-show="ssuDetails.preferenceBased")
